# matrix-game-lockstep

./: CMakeLists.txt  README.md
MatrixGame/: CMakeLists.txt
MatrixGame/CFG/: README.txt
MatrixGame/CFG/robots/: data.txt  iface.txt
MatrixGame/src/: DevConsole.cpp  MatrixCursor.cpp  MatrixCursor.hpp  MatrixFlyer.cpp  MatrixFormGame.cpp  MatrixFormGame.hpp  MatrixGame.cpp  MatrixGame.h  MatrixGameDll.cpp  MatrixGameDll.hpp  MatrixLogic.cpp  MatrixLogic.hpp  MatrixMap.cpp  MatrixMap.hpp  MatrixMapGroup.hpp  MatrixMapPrepare.cpp  MatrixMapStatic.cpp  MatrixMapStatic.hpp  MatrixMinimap.cpp  MatrixMultiSelection.cpp  MatrixObject.cpp  MatrixObject.hpp  MatrixObjectBuilding.cpp  MatrixObjectBuilding.hpp  MatrixObjectCannon.cpp  MatrixObjectRobot.cpp  MatrixObjectRobot.hpp  MatrixProgressBar.cpp  MatrixRobot.cpp  MatrixRobot.hpp  MatrixSide.cpp  MatrixSide.hpp  MatrixSkinManager.cpp  MatrixTerSurface.cpp  MatrixTransition.hpp  MatrixWater.cpp
MatrixGame/src/Effects/: MatrixEffect.cpp  MatrixEffect.hpp  MatrixEffectBigBoom.cpp  MatrixEffectBigBoom.hpp  MatrixEffectBillboard.cpp  MatrixEffectBillboard.hpp  MatrixEffectDust.cpp  MatrixEffectDust.hpp  MatrixEffectElevatorField.cpp  MatrixEffectElevatorField.hpp  MatrixEffectExplosion.cpp  MatrixEffectExplosion.hpp  MatrixEffectFirePlasma.cpp  MatrixEffectFirePlasma.hpp  MatrixEffectFlame.cpp  MatrixEffectFlame.hpp  MatrixEffectKonus.cpp  MatrixEffectKonus.hpp  MatrixEffectLandscapeSpot.cpp  MatrixEffectLandscapeSpot.hpp  MatrixEffectLightening.cpp  MatrixEffectLightening.hpp  MatrixEffectMoveTo.cpp  MatrixEffectMoveTo.hpp  MatrixEffectMovingObject.cpp  MatrixEffectMovingObject.hpp  MatrixEffectPath.cpp  MatrixEffectPath.hpp  MatrixEffectPointLight.cpp  MatrixEffectPointLight.hpp  MatrixEffectRepair.cpp  MatrixEffectRepair.hpp  MatrixEffectSelection.cpp  MatrixEffectSelection.hpp  MatrixEffectShleif.cpp  MatrixEffectShleif.hpp  MatrixEffectSmokeAndFire.cpp  MatrixEffectSmokeAndFire.hpp  MatrixEffectWeapon.cpp  MatrixEffectWeapon.hpp  (+2 more)
MatrixGame/src/Interface/: CConstructor.cpp  CConstructor.h  CCounter.cpp  CHistory.cpp  CIFaceButton.cpp  CIFaceElement.cpp  CIFaceMenu.cpp  CInterface.cpp  CInterface.h
MatrixGame/src/Logic/: MatrixAIGroup.h  MatrixEnvironment.h  MatrixRoadNetwork.hpp  MatrixRule.h
MatrixGame/src/Network/: Command.cpp  Command.hpp  Message.cpp  Message.hpp  StateManager.cpp  StateManager.hpp
MatrixGame/src/Text/: Font.hpp  Parser.cpp
MatrixLib/: CMakeLists.txt
MatrixLib/3G/: 3g.cpp  3g.hpp  CBillboard.cpp  CBillboard.hpp  Cache.cpp  Cache.hpp  Form.hpp  Math3D.hpp  Texture.cpp  Texture.hpp  VectorObject.cpp
MatrixLib/Base/: BaseDef.hpp  CBlockPar.hpp  CReminder.hpp  Types.hpp  preallocated_list.hpp
cmake/: linux-toolchain.cmake
docs/: CROSS_COMPILATION.md
